--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -69,12 +69,12 @@ jobs:
         run: cp .github/environments/avv-d.ico build/favicon.ico
       - name: Copy config
         run: cp .github/environments/config-dev.json build/config.json
-      - uses: w9jds/firebase-action@v13.19.0
+      - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
-          args: deploy
-        env:
-          PROJECT_ID: deviation-messages-dev
-          GCP_SA_KEY: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_DEVIATION_MESSAGES_DEV }}'
+          repoToken: '${{ secrets.GITHUB_TOKEN }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_DEVIATION_MESSAGES_DEV }}'
+          projectId: deviation-messages-dev
+          channelId: live
   deploy_staging:
     runs-on: ubuntu-latest
     needs: [deploy_dev]
@@ -87,12 +87,12 @@ jobs:
         run: cp .github/environments/avv-s.ico build/favicon.ico
       - name: Copy config
         run: cp .github/environments/config-staging.json build/config.json
-      - uses: w9jds/firebase-action@v13.19.0
+      - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
-          args: deploy
-        env:
-          PROJECT_ID: deviation-messages-staging
-          GCP_SA_KEY: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_DEVIATION_MESSAGES_STAGING }}'
+          repoToken: '${{ secrets.GITHUB_TOKEN }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_DEVIATION_MESSAGES_STAGING }}'
+          projectId: deviation-messages-staging
+          channelId: live
   deploy_prod:
     runs-on: ubuntu-latest
     needs: [deploy_dev, deploy_staging]
@@ -105,9 +105,9 @@ jobs:
         run: cp .github/environments/avv-p.ico build/favicon.ico
       - name: Copy config
         run: cp .github/environments/config-prod.json build/config.json
-      - uses: w9jds/firebase-action@v13.19.0
+      - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
-          args: deploy
-        env:
-          PROJECT_ID: deviation-messages-prod
-          GCP_SA_KEY: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_DEVIATION_MESSAGES_PROD }}'
+          repoToken: '${{ secrets.GITHUB_TOKEN }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_DEVIATION_MESSAGES_PROD }}'
+          projectId: deviation-messages-prod
+          channelId: live
