--- a/renovate.json
+++ b/renovate.json
@@ -1,13 +1,20 @@
 {
-  "extends": ["github>entur/ror-renovate-config"],
+  "extends": [
+    "github>entur/ror-renovate-config",
+    "group:allNonMajor",
+    "schedule:weekly"
+  ],
   "npmrcMerge": true,
+  "timezone": "Europe/Oslo",
   "packageRules": [
     {
-      "description": "Ignore nodejs",
-      "matchPackageNames": ["node"],
-      "matchManagers": ["npm"],
-      "matchDepTypes": [ "engines" ],
-      "dependencyDashboardApproval": true
+      "groupName": "vite",
+      "matchPackageNames": [
+        "vite-*",
+        "@vitejs/*",
+        "vitest",
+        "@vitest/*"
+      ]
     }
   ]
 }
