--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -2,10 +2,14 @@
 # https://github.com/firebase/firebase-tools
 
 name: Build and deploy
-'on':
+on:
   push:
-    branches:
-      - master
+    branches: [ master ]
+
+concurrency:
+  group: "${{ github.workflow }}-${{ github.ref }}-${{ github.event_name }}"
+  cancel-in-progress: true
+
 jobs:
   build:
     runs-on: ubuntu-latest
